--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 				font-size: 1em;
 				line-height: 1.5;
 			}
+			textarea[readonly] {
+				background-color: #e9e9e9;
+				cursor: not-allowed;
+			}
 			button {
 				display: block;
 				width: 100%;
@@ -180,7 +184,6 @@
 				position: relative;
 				overflow: hidden;
 				border: 1px solid #c0c8cf;
-				color: transparent;
 			}
 
 			.indeterminate-progress-bar::before {
@@ -202,6 +205,13 @@
 					left: 100%;
 				}
 			}
+
+			#text1stat,
+			#text2stat,
+			#textstat {
+				line-height: 1.2;
+				margin: 0;
+			}
 		</style>
 	</head>
 	<body>
@@ -218,6 +228,7 @@
 						required
 						placeholder="最初のテキストを入力してください。"
 					></textarea>
+					<p id="text1stat">- 文字</p>
 				</div>
 				<div class="form-group">
 					<label for="text2">テキスト2:</label>
@@ -228,7 +239,9 @@
 						required
 						placeholder="比較するテキストを入力してください。"
 					></textarea>
+					<p id="text2stat">- 文字</p>
 				</div>
+				<p id="textstat">テーブルサイズ: --- 項目 (--- KiB)</p>
 			</div>
 			<button type="submit" id="submitButton">計算と差分表示</button>
 		</form>
@@ -251,14 +264,22 @@
 			function callWorker(text1, text2) {
 				const worker = new Worker("worker.js");
 				worker.postMessage({ text1, text2 });
-				return new Promise((resolve) => {
+				return new Promise((resolve, reject) => {
 					worker.onmessage = function (e) {
 						if (e.data.type === "progress") {
 							document.getElementById("resultsContainer").innerHTML =
-								`<div class="result-container"><progress value="${e.data.value}">${e.data.text}</progress></div>`;
+								`<div class="result-container">${e.data.text}<progress value="${e.data.value}" max="1"></progress></div>`;
 						} else if (e.data.type === "result") {
 							resolve([e.data.distance, e.data.html1, e.data.html2]);
+							worker.terminate();
+						} else if (e.data.type === "error") {
+							reject(new Error(e.data.message));
+							worker.terminate();
 						}
+					};
+					worker.onerror = function (err) {
+						reject(new Error("Workerエラーが発生しました: " + err.message));
+						worker.terminate();
 					};
 				});
 			}
@@ -302,55 +323,92 @@
 				resultsContainer.innerHTML = content;
 			}
 
-			document
-				.getElementById("diffForm")
-				.addEventListener("submit", async function (event) {
-					event.preventDefault();
+			const text1Input = document.getElementById("text1");
+			const text2Input = document.getElementById("text2");
+			const text1Stat = document.getElementById("text1stat");
+			const text2Stat = document.getElementById("text2stat");
+			const textStat = document.getElementById("textstat");
+			const submitButton = document.getElementById("submitButton");
+			const resultsContainer = document.getElementById("resultsContainer");
+			const diffForm = document.getElementById("diffForm");
 
-					const form = event.target;
-					const text1 = form.text1.value;
-					const text2 = form.text2.value;
+			const MAX_CHARS = 65535;
 
-					const submitButton = document.getElementById("submitButton");
+			function updateStats() {
+				const len1 = text1Input.value.length;
+				const len2 = text2Input.value.length;
+				text1Stat.textContent = `${len1}/${MAX_CHARS}文字`;
+				text2Stat.textContent = `${len2}/${MAX_CHARS}文字`;
 
-					submitButton.disabled = true;
-					document.getElementById("resultsContainer").innerHTML =
-						`<div class="result-container"><div class="indeterminate-progress-bar">準備中...</div></div>`;
-					document.documentElement.classList.add("loading");
+				const tableSize = (len1 + 1) * (len2 + 1);
+				const memoryMiB = ((tableSize * 2) / 1024 / 1024).toFixed(3);
 
-					let charDist = null;
-					let diffHtml1 = "";
-					let diffHtml2 = "";
-					let calculationTimeMs = null;
-					let error = null;
+				textStat.textContent = `テーブルサイズ: ${tableSize} 項目 ( ${memoryMiB} MiB )`;
+			}
 
-					try {
-						const startTime = performance.now();
+			text1Input.addEventListener("input", updateStats);
+			text2Input.addEventListener("input", updateStats);
+			window.addEventListener("load", updateStats);
 
-						[charDist, diffHtml1, diffHtml2] = await callWorker(text1, text2);
+			diffForm.addEventListener("submit", async function (event) {
+				event.preventDefault();
 
-						const endTime = performance.now();
-						calculationTimeMs = endTime - startTime;
-					} catch (e) {
-						console.error("Calculation error:", e);
-						if (e instanceof Error) {
-							error = `計算中にエラーが発生しました: ${e.message}`;
-						} else {
-							error = `計算中に不明なエラーが発生しました: ${e}`;
-						}
-					} finally {
-						updateResultsDisplay(
-							charDist,
-							diffHtml1,
-							diffHtml2,
-							calculationTimeMs,
-							error,
-						);
-						document.documentElement.classList.remove("loading");
+				const text1 = text1Input.value;
+				const text2 = text2Input.value;
 
-						submitButton.disabled = false;
+				if (text1.length > MAX_CHARS || text2.length > MAX_CHARS) {
+					updateResultsDisplay(
+						null,
+						null,
+						null,
+						null,
+						`入力テキストが長すぎます。各テキストは最大${MAX_CHARS}文字までです。`,
+					);
+					return;
+				}
+
+				text1Input.readOnly = true;
+				text2Input.readOnly = true;
+				submitButton.disabled = true;
+
+				resultsContainer.innerHTML = `<div class="result-container">[1/4]ワーカー起動中...<div class="indeterminate-progress-bar"></div></div>`;
+				document.documentElement.classList.add("loading");
+
+				let charDist = null;
+				let diffHtml1 = "";
+				let diffHtml2 = "";
+				let calculationTimeMs = null;
+				let error = null;
+
+				try {
+					const startTime = performance.now();
+
+					[charDist, diffHtml1, diffHtml2] = await callWorker(text1, text2);
+
+					const endTime = performance.now();
+					calculationTimeMs = endTime - startTime;
+				} catch (e) {
+					console.error("Calculation error:", e);
+					if (e instanceof Error) {
+						error = `計算中にエラーが発生しました: ${e.message}`;
+					} else {
+						error = `計算中に不明なエラーが発生しました: ${e}`;
 					}
-				});
+				} finally {
+					updateResultsDisplay(
+						charDist,
+						diffHtml1,
+						diffHtml2,
+						calculationTimeMs,
+						error,
+					);
+					document.documentElement.classList.remove("loading");
+
+					text1Input.readOnly = false;
+					text2Input.readOnly = false;
+					submitButton.disabled = false;
+				}
+			});
 		</script>
 	</body>
 </html>
